src/qbert_py_minesweeper/log/build_2023-04-12_14-12-29/qbert_py_minesweeper/stdout_stderr.log
running egg_info
creating build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info
writing build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/PKG-INFO
writing dependency_links to build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/dependency_links.txt
writing entry points to build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/entry_points.txt
writing requirements to build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/requires.txt
writing top-level names to build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/top_level.txt
writing manifest file 'build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/SOURCES.txt'
reading manifest file 'build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/SOURCES.txt'
writing manifest file 'build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info/SOURCES.txt'
running build
running build_py
creating /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build
creating /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib
creating /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib/qbert_py_minesweeper
copying qbert_py_minesweeper/ball_tracker.py -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib/qbert_py_minesweeper
copying qbert_py_minesweeper/__init__.py -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib/qbert_py_minesweeper
copying qbert_py_minesweeper/minesweeper.py -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib/qbert_py_minesweeper
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
creating /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper
copying /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib/qbert_py_minesweeper/ball_tracker.py -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper
copying /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib/qbert_py_minesweeper/__init__.py -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper
copying /home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/build/lib/qbert_py_minesweeper/minesweeper.py -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper
byte-compiling /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper/ball_tracker.py to ball_tracker.cpython-310.pyc
byte-compiling /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper/minesweeper.py to minesweeper.cpython-310.pyc
  File "/home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper/minesweeper.py", line 100
    vs = /camera/color/image_raw
         ^
SyntaxError: invalid syntax

running install_data
creating /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/share/ament_index
creating /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/share/ament_index/resource_index
creating /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/share/ament_index/resource_index/packages
copying resource/qbert_py_minesweeper -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/share/ament_index/resource_index/packages
copying package.xml -> /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/share/qbert_py_minesweeper
running install_egg_info
Copying build/qbert_py_minesweeper/qbert_py_minesweeper.egg-info to /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/python3.10/site-packages/qbert_py_minesweeper-0.0.0-py3.10.egg-info
running install_scripts
Installing minesweeper script to /home/johnma/ros2_ws/src/qbert_py_minesweeper/install/qbert_py_minesweeper/lib/qbert_py_minesweeper
writing list of installed files to '/home/johnma/ros2_ws/src/qbert_py_minesweeper/build/qbert_py_minesweeper/install.log'
